--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,13 @@
 <!doctype html>
 <html lang="en" data-theme="light">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="color-scheme" content="light">
-  <link rel="stylesheet" href="/css/style.css">
-  <title>{{ page.title }}</title>
-</head>
+
+{% include head.html %}
 
 <body>
+  
   {% include header.html %}
+
   <main class="container">
     <article>
       <h2>{{ page.title}}</h2>
@@ -18,7 +15,9 @@
       {{ content }}
     </article>
   </main>
+
   {% include footer.html %}
+
 </body>
 
 </html>
