--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
       </ul>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/categories/">Categories</a></li>
+        <li><a href="/categories.html">Categories</a></li>
       </ul>
     </nav>
   </header>
