--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,13 +1,7 @@
 <!doctype html>
 <html lang="en" data-theme="light">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="color-scheme" content="light">
-  <link rel="stylesheet" href="/css/style.css">
-  <title>{{ page.title }}</title>
-</head>
+{% include head.html %}
 
 <body>
   {% include header.html %}
