--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 
   <main class="container">
     <article>
-      <h2>{{ page.title}}</h2>
-      <p class="date"><small>{{ page.date | date_to_string }}</small></p>
+      <span class="date">{{ page.date | date_to_string }}</span>
+      <h1>{{ page.title}}</h1>
       {{ content }}
     </article>
   </main>
