--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -223,7 +223,7 @@ details summary[role=button]:not(.outline)::after {
 }
 
 [aria-busy=true]:not(input, select, textarea):is(button, [type=submit], [type=button], [type=reset], [role=button]):not(.outline)::before {
-  filter: brightness(0) invert(0);
+  filter: brightness(0) invert(1);
 }
 
 /**
@@ -235,19 +235,19 @@ details summary[role=button]:not(.outline)::after {
   color-scheme: light;
   --pico-background-color: #fff;
   --pico-color: #373c44;
-  --pico-text-selection-color: rgba(183, 136, 0, 0.25);
+  --pico-text-selection-color: rgba(244, 93, 44, 0.25);
   --pico-muted-color: #646b79;
   --pico-muted-border-color: rgb(231, 234, 239.5);
-  --pico-primary: #876400;
-  --pico-primary-background: #ffbf00;
+  --pico-primary: #bd3c13;
+  --pico-primary-background: #d24317;
   --pico-primary-border: var(--pico-primary-background);
-  --pico-primary-underline: rgba(135, 100, 0, 0.5);
-  --pico-primary-hover: #694d00;
-  --pico-primary-hover-background: #e8ae01;
+  --pico-primary-underline: rgba(189, 60, 19, 0.5);
+  --pico-primary-hover: #942d0d;
+  --pico-primary-hover-background: #bd3c13;
   --pico-primary-hover-border: var(--pico-primary-hover-background);
   --pico-primary-hover-underline: var(--pico-primary-hover);
-  --pico-primary-focus: rgba(183, 136, 0, 0.5);
-  --pico-primary-inverse: #000;
+  --pico-primary-focus: rgba(244, 93, 44, 0.5);
+  --pico-primary-inverse: #fff;
   --pico-secondary: #5d6b89;
   --pico-secondary-background: #525f7a;
   --pico-secondary-border: var(--pico-secondary-background);
@@ -307,7 +307,7 @@ details summary[role=button]:not(.outline)::after {
   --pico-switch-background-color: #bfc7d9;
   --pico-switch-checked-background-color: var(--pico-primary-background);
   --pico-switch-color: #fff;
-  --pico-switch-thumb-box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  --pico-switch-thumb-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
   --pico-range-border-color: #dfe3eb;
   --pico-range-active-border-color: #bfc7d9;
   --pico-range-thumb-border-color: var(--pico-background-color);
@@ -362,19 +362,19 @@ details summary[role=button]:not(.outline)::after {
     color-scheme: dark;
     --pico-background-color: rgb(19, 22.5, 30.5);
     --pico-color: #c2c7d0;
-    --pico-text-selection-color: rgba(199, 148, 0, 0.1875);
+    --pico-text-selection-color: rgba(245, 107, 61, 0.1875);
     --pico-muted-color: #7b8495;
     --pico-muted-border-color: #202632;
-    --pico-primary: #c79400;
-    --pico-primary-background: #ffbf00;
+    --pico-primary: #f56b3d;
+    --pico-primary-background: #d24317;
     --pico-primary-border: var(--pico-primary-background);
-    --pico-primary-underline: rgba(199, 148, 0, 0.5);
-    --pico-primary-hover: #e8ae01;
-    --pico-primary-hover-background: #fecc63;
+    --pico-primary-underline: rgba(245, 107, 61, 0.5);
+    --pico-primary-hover: #f8a283;
+    --pico-primary-hover-background: #e74b1a;
     --pico-primary-hover-border: var(--pico-primary-hover-background);
     --pico-primary-hover-underline: var(--pico-primary-hover);
-    --pico-primary-focus: rgba(199, 148, 0, 0.375);
-    --pico-primary-inverse: #000;
+    --pico-primary-focus: rgba(245, 107, 61, 0.375);
+    --pico-primary-inverse: #fff;
     --pico-secondary: #969eaf;
     --pico-secondary-background: #525f7a;
     --pico-secondary-border: var(--pico-secondary-background);
@@ -434,7 +434,7 @@ details summary[role=button]:not(.outline)::after {
     --pico-switch-background-color: #333c4e;
     --pico-switch-checked-background-color: var(--pico-primary-background);
     --pico-switch-color: #fff;
-    --pico-switch-thumb-box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+    --pico-switch-thumb-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
     --pico-range-border-color: #202632;
     --pico-range-active-border-color: #2a3140;
     --pico-range-thumb-border-color: var(--pico-background-color);
@@ -497,19 +497,19 @@ details summary[role=button]:not(.outline)::after {
   color-scheme: dark;
   --pico-background-color: rgb(19, 22.5, 30.5);
   --pico-color: #c2c7d0;
-  --pico-text-selection-color: rgba(199, 148, 0, 0.1875);
+  --pico-text-selection-color: rgba(245, 107, 61, 0.1875);
   --pico-muted-color: #7b8495;
   --pico-muted-border-color: #202632;
-  --pico-primary: #c79400;
-  --pico-primary-background: #ffbf00;
+  --pico-primary: #f56b3d;
+  --pico-primary-background: #d24317;
   --pico-primary-border: var(--pico-primary-background);
-  --pico-primary-underline: rgba(199, 148, 0, 0.5);
-  --pico-primary-hover: #e8ae01;
-  --pico-primary-hover-background: #fecc63;
+  --pico-primary-underline: rgba(245, 107, 61, 0.5);
+  --pico-primary-hover: #f8a283;
+  --pico-primary-hover-background: #e74b1a;
   --pico-primary-hover-border: var(--pico-primary-hover-background);
   --pico-primary-hover-underline: var(--pico-primary-hover);
-  --pico-primary-focus: rgba(199, 148, 0, 0.375);
-  --pico-primary-inverse: #000;
+  --pico-primary-focus: rgba(245, 107, 61, 0.375);
+  --pico-primary-inverse: #fff;
   --pico-secondary: #969eaf;
   --pico-secondary-background: #525f7a;
   --pico-secondary-border: var(--pico-secondary-background);
@@ -569,7 +569,7 @@ details summary[role=button]:not(.outline)::after {
   --pico-switch-background-color: #333c4e;
   --pico-switch-checked-background-color: var(--pico-primary-background);
   --pico-switch-color: #fff;
-  --pico-switch-thumb-box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  --pico-switch-thumb-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
   --pico-range-border-color: #202632;
   --pico-range-active-border-color: #2a3140;
   --pico-range-thumb-border-color: var(--pico-background-color);
@@ -2818,8 +2818,13 @@ textarea,
   color: var(--pico-h3-color);
 }
 
-header nav h3 a {
+a {
+  text-decoration: none;
+}
+
+header nav h2 a {
   letter-spacing: normal;
+  text-transform: none;
 }
 header nav a {
   text-transform: uppercase;
