--- a/css/style.scss
+++ b/css/style.scss
@@ -46,6 +46,7 @@
     )
   )
 );
+@use "colors" as *;
 :root, :host {
   --pico-font-family-sans-serif: 'Trebuchet MS', system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, Helvetica, Arial, "Helvetica Neue", sans-serif, var(--pico-font-family-emoji);
   --pico-font-family: var(--pico-font-family-sans-serif);
@@ -60,6 +61,13 @@
 
 a {
   text-decoration: none;
+}
+
+body {
+  background-color: $sand-50;
+}
+article {
+  border-left: 3px solid var(--pico-primary);
 }
 
 header {
