--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2822,6 +2822,14 @@ a {
   text-decoration: none;
 }
 
+body {
+  background-color: #f2f0ec;
+}
+
+article {
+  border-left: 3px solid var(--pico-primary);
+}
+
 header nav h2 a {
   letter-spacing: normal;
   text-transform: none;
